--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parcel-project-template",
+  "name": "pr",
   "version": "2.0.0",
   "description": "",
   "homepage": "https://lassandra85.github.io/pr",
