--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "pr",
+  "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
   "homepage": "https://lassandra85.github.io/pr",
   "scripts": {
-    "start": "parcel src/*.html ",
+    "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /pr/"
   },
   "repository": {
@@ -18,10 +18,7 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
-    "flatpickr": "^4.6.13",
-    "jshint": "^2.13.6",
-    "modern-normalize": "^1.1.0",
-    "notiflix": "^3.2.5"
+    "modern-normalize": "^1.1.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
