--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "flatpickr": "^4.6.13",
     "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
+    "notiflix": "^3.2.7",
     "simplelightbox": "^2.14.2"
   },
   "devDependencies": {
